--- a/task3/real-time-data-fetching/src/app/app.component.html
+++ b/task3/real-time-data-fetching/src/app/app.component.html
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-custom shadow-sm">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark-gray shadow-sm">
   <div class="container">
-    <a class="navbar-brand text-highlight fw-bold" href="#">MyApp</a>
+    <a class="navbar-brand text-accent fw-bold" href="#">MyApp</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,16 +16,18 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link text-secondary" routerLink="/" routerLinkActive="active">Home</a>
+          <a class="nav-link text-light" routerLink="/" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-secondary" routerLink="/posts" routerLinkActive="active">Posts</a>
+          <a class="nav-link text-light" routerLink="/posts" routerLinkActive="active">Posts</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
+
 <div class="container mt-4">
   <router-outlet></router-outlet>
 </div>
+
