edit font color in the search bar

--- a/task3/real-time-data-fetching/src/app/posts/posts.component.css
+++ b/task3/real-time-data-fetching/src/app/posts/posts.component.css
@@ -20,7 +20,7 @@ p.text-light {
   padding: 10px;
   font-size: 1rem;
   background-color: #bcb7b7;
-  color: #E0E0E0;
+  color: #090808;
 }
 
 /* Table */
